<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/question_num"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:text="@string/question_num"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="348dp"
        android:layout_height="80dp"
        android:layout_marginTop="32dp"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/question"
        android:textAlignment="center"
        android:textSize="28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question_num" />

    <Button
        android:id="@+id/answer_a"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:background="#2196F3"
        android:backgroundTint="@null"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/answer_a"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/answer_b"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#2196F3"
        android:backgroundTint="@null"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/answer_b"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_a" />

    <Button
        android:id="@+id/answer_c"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#2196F3"
        android:backgroundTint="@null"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/answer_c"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_b" />

    <Button
        android:id="@+id/answer_d"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#2196F3"
        android:backgroundTint="@null"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/answer_d"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_c" />

    <Button
        android:id="@+id/answer_e"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:background="#2196F3"
        android:foreground="?attr/selectableItemBackground"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:text="@string/answer_e"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_d" />

    <Button
        android:id="@+id/submit"
        android:layout_width="258dp"
        android:layout_height="61dp"
        android:layout_marginTop="32dp"
        android:background="@color/submit_button_green"
        android:backgroundTint="@null"
        android:fontFamily="sans-serif"
        android:includeFontPadding="false"
        android:foreground="?attr/selectableItemBackground"
        android:text="@string/submit_answer"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer_e" />

</androidx.constraintlayout.widget.ConstraintLayout>